# ST

./: .gitignore  README.md  eval_vn_retrieval_mteb.py  pyproject.toml  train_vn_retrieval_bm25.py
